Tests/Conformance/Generated/Builtin/Constant/Bls12_381/G2/Too_short.lean
-- Auto-generated by gen_conformance_tests.py — do not edit manually.
import Tests.Conformance.ConformanceUtils
import PlutusCore.UPLC.ScriptEncoding.Basic

namespace Tests.Conformance.Generated.Builtin.Constant.Bls12_381.G2.Too_short

open Tests.Conformance

/-- error: Parsing error -/
#guard_msgs in
#conformance_import_uplc builtin_constant_bls12_381_G2_too_short "../.plutus-conformance/plutus-conformance/test-cases/uplc/evaluation/builtin/constant/bls12-381/G2/too-short/too-short.uplc"

end Tests.Conformance.Generated.Builtin.Constant.Bls12_381.G2.Too_short
